--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto de control de empresas Kinal",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "Fredy Reyes",
   "license": "ISC",
@@ -17,5 +17,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.15",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
