--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
+    "html-pdf": "^2.2.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.11.15",
